# arachne

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
migrations/: 001_initial.sql
module/: default.nix  nixos.nix
src/: app.rs  browser.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  models.rs  scheduler.rs
src/crawler/: fatal_model.rs  mod.rs
src/pipeline/: dedup.rs  mod.rs  normalize.rs  photos.rs
src/storage/: mod.rs  postgres.rs  redis.rs  rustfs.rs
