[package]
name = "arachne"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arachne"
path = "src/main.rs"

[lib]
name = "arachne"
path = "src/lib.rs"

[dependencies]
# Browser automation (CDP)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# HTML parsing
scraper = "0.21"

# HTTP (photo downloads)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# S3 (RustFS)
rust-s3 = { version = "0.37", default-features = false, features = ["with-tokio", "fail-on-err"] }

# Photo hashing
image_hasher = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# HTTP server (health)
axum = { version = "0.8", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
url = "2.5"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
